--- a/layouts/partials/cover.html
+++ b/layouts/partials/cover.html
@@ -1,10 +1,10 @@
 {{- with .cxt }} {{/* Apply proper context from dict */}}
   {{- if (and .Params.cover.image (not $.isHidden)) }}
     {{- $alt := (.Params.cover.alt | default .Params.cover.caption | plainify) }}
-    {{- $loading := cond (eq $.IsSingle true) "eager" "lazy" }}
+    {{- $loading := cond $isSingle "eager" "lazy" }}
     <figure class="entry-cover">
       {{- $responsiveImages := (.Params.cover.responsiveImages | default site.Params.cover.responsiveImages) | default true }}
-      {{- $addLink := (and site.Params.cover.linkFullImages (eq $.IsSingle true)) }}
+      {{- $addLink := (and site.Params.cover.linkFullImages $isSingle) }}
       {{- $pageBundleCover     := (.Resources.ByType "image").GetMatch (printf "*%s*" (.Params.cover.image)) }}
       {{- $globalResourcesCover := (resources.ByType "image").GetMatch (printf "*%s*" (.Params.cover.image)) }}
       {{- $cover := (or $pageBundleCover $globalResourcesCover) }}
@@ -35,7 +35,7 @@
       {{- end }}
       {{- if $addLink }}</a>{{ end -}}
       {{/*  Display Caption  */}}
-      {{- if (eq $.IsSingle true) }}
+      {{- if $isSingle }}
         {{ with .Params.cover.caption }}<p>{{ . | markdownify }}</p>{{- end }}
       {{- end }}
     </figure>
