--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -65,7 +65,7 @@
     <article class="{{ $class }}">
       {{- $isHidden := (site.Params.cover.hidden | default site.Params.cover.hiddenInList) }}
       {{- $isSingle := eq .Kind "page" }}
-      {{- partial "cover.html" (dict "cxt" . "IsHome" .IsHome "isHidden" $isHidden "IsSingle" $isSingle) }}
+      {{- partial "custom-cover.html" (dict "cxt" . "IsHome" .IsHome "isHidden" $isHidden "IsSingle" $isSingle) }}
       <header class="entry-header">
         <h2>
           {{- .Title }}
